Added authorities to jwt

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.12.5'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    implementation group: 'com.okta.sdk', name: 'okta-sdk-api', version: '15.0.0'
+    implementation group: 'com.okta.sdk', name: 'okta-sdk-impl', version: '15.0.0'
+    implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.12.0'
 }
 
 tasks.named('test') {
